--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
 		    "BOT_NAME": {
 			"description": "Change the bot Name here",
 			"required": true,
-			"value": "CYBER-X BETA 1.5"
+			"value": "Taskeen official 03216740469"
 			},
 			"BOT_NUMBER": {
 			"description": "Change the Bot Number",
